# HtyApp

./: .gitignore  HtySkillManager.code-workspace  changelog.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md  settings.local.json
Plan/: PLAN.md  REFACTOR_BLUEPRINT.md
electron/: deepseek-service.cjs  download-service.cjs  main.cjs  merge-session.cjs  preload.cjs  service.cjs  sync-service.cjs  tools-service.cjs  updater.cjs
electron/download-utils/: download-storage.cjs  download-worker.cjs
electron/sync-utils/: blacklist-storage.cjs  diff-engine.cjs  diff-worker.cjs  file-hash-cache.cjs  file-sync.cjs  filter-scheme-storage.cjs  path-id.cjs  project-settings.cjs  project-storage.cjs  sync-log-storage.cjs  sync-state-storage.cjs  template-storage.cjs
electron/tools-utils/: atomic-json.cjs  bookmark-storage.cjs  memo-storage.cjs  todo-storage.cjs
public/game/: index.js  interact.js  messaging.js  three_core.js  three_examples.js  three_module.js
scripts/: electron-dev.mjs  generate-app-icon-from-removed-bg.py  generate-app-icon-from-rose.py  generate-app-icon-from-transparent-png.py  run-electron-dev.ps1  run-tauri-dev.ps1  run-vite-dev.ps1  strip-rose-icon-background.py
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  service.rs
src/app/: App.tsx  providers.tsx
src/components/: DiffView.tsx  UpdateDialog.test.tsx  UpdateDialog.tsx  UpdateNotification.tsx
src/deepseek/: DeepseekApp.tsx  (+1 more)
(+78 files in other folders)
